--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="navbar">
         <div class="container">
           <a class="navbar-brand" href="index.html">jakuschin.design</a>
           <button
