--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
+      rel="stylesheet" href="websiteStyles.css">
+
     />
   </head>
   <body>
