--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       rel="stylesheet" href="websiteStyles.css">
 
-    />
+    </link>
   </head>
   <body>
     <header>
