--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     />
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <header class="sticky-top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="index.html">jakuschin.design</a>
           <button
